crates/backends/cuda/tests/snapshots/golden_cu__example_fir.snap
---
source: crates/backends/cuda/tests/golden_cu.rs
expression: cu
---
// flow-backend-cuda emitted translation unit
// build: nvcc -std=c++17 -fmad=true -arch=sm_89 prog.cu libflow_rt.a -lpthread -ldl -lm -o prog
// DESIGN §4 (amended S24b, Sapir): -fmad=true is the product/perf default; conformance runs pin -fmad=false for oracle bit-parity. Host -march=native/-mfma stays forbidden in conformance.

#include <cstdint>
#include <cstdio>
#include <cstdlib>
#include <cstddef>
#include <cmath>
#include <cuda_runtime.h>

extern "C" {
void flow_print_i32(int32_t v, bool newline);
void flow_print_i64(int64_t v, bool newline);
void flow_print_u8(uint8_t v, bool newline);
void flow_print_bool(bool v, bool newline);
void flow_print_f32(float v, bool newline);
void flow_print_f64(double v, bool newline);
void flow_print_str(const uint8_t* ptr, size_t len, bool newline);
// Matches the Rust `-> !` (flow-rt/src/lib.rs): lets the compiler drop the
// dead fall-through after host guards. C++11 attribute, legal on an
// extern "C" declaration; host-only, so no device-pass concern.
[[noreturn]] void flow_trap(uint32_t kind);
}

// --- trap flag + CUDA error protocol (DESIGN §3) ---------------------------
static unsigned int* d_trap = nullptr;

// Assert one CUDA API return; on error print to stderr and exit 102 (the
// harness-visible infra-failure class — never an R1 data point).
static void cu_check(cudaError_t err, const char* what) {
    if (err != cudaSuccess) {
        fprintf(stderr, "flow-cuda infra error at %s: %s\n", what, cudaGetErrorString(err));
        exit(102);
    }
}

// Zero the trap flag — once per process, called at main start (H→D, §2 item 3).
static void trap_init() {
    cu_check(cudaMalloc((void**)&d_trap, sizeof(unsigned int)), "cudaMalloc(d_trap)");
    cu_check(cudaMemset(d_trap, 0, sizeof(unsigned int)), "cudaMemset(d_trap)");
}

// Trap-capable launch sites call this after EVERY such kernel launch (#14:
// a provably trap-free kernel takes no trap argument and skips this
// readback): cudaGetLastError
// (exit-102 protocol), then a host-synchronizing D→H read of the flag (the
// memcpy is the sync point); nonzero kind ⇒ flow_trap(kind - 1) on the host
// (exit 101) — the flag stores kind + 1 (0 = quiescent after trap_init's
// memset; 1 = div_zero, 2 = index_oob), decoded here to the flow-rt kinds.
[[maybe_unused]] static void trap_check_after_launch() {
    cu_check(cudaGetLastError(), "kernel launch");
    unsigned int kind = 0;
    cu_check(cudaMemcpy(&kind, d_trap, sizeof(unsigned int), cudaMemcpyDeviceToHost),
             "cudaMemcpy(d_trap)");
    if (kind != 0) {
        flow_trap(kind - 1);
    }
}

struct FlowProd_floatp_floatp {
    float* f0;
    float* f1;
};
static_assert(sizeof(FlowProd_floatp_floatp) == 16, "FlowProd_floatp_floatp: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_t_float {
    int32_t f0;
    float f1;
};
static_assert(sizeof(FlowProd_int32_t_float) == 8, "FlowProd_int32_t_float: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_t_int32_t {
    int32_t f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_t_int32_t) == 8, "FlowProd_int32_t_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_floatp_int32_t {
    float* f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_floatp_int32_t) == 16, "FlowProd_floatp_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_float {
    float f0;
    float f1;
};
static_assert(sizeof(FlowProd_float_float) == 8, "FlowProd_float_float: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_FlowProd_int32_t_float_bool {
    FlowProd_int32_t_float f0;
    bool f1;
};
static_assert(sizeof(FlowProd_FlowProd_int32_t_float_bool) == 12, "FlowProd_FlowProd_int32_t_float_bool: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_bool {
    float f0;
    bool f1;
};
static_assert(sizeof(FlowProd_float_bool) == 8, "FlowProd_float_bool: abi_sizeof drift (plan-smart-arenas)");

__global__ void k0_0(float* result, float* arr, int64_t idx, unsigned int* trap) {
  if (idx < 0 || idx >= (int64_t)4) { *trap = 2u; return; }
  *result = arr[(unsigned long long)idx];
}
__global__ void k0_1(float* result, float* arr, int64_t idx, unsigned int* trap) {
  if (idx < 0 || idx >= (int64_t)8) { *trap = 2u; return; }
  *result = arr[(unsigned long long)idx];
}

static float fn0(FlowProd_floatp_floatp in);
static void flow_main();

static float fn0(FlowProd_floatp_floatp in) {
  float o1;
  float* o2 = nullptr;
  float* o3 = nullptr;
  FlowProd_int32_t_float o4;
  FlowProd_int32_t_float o5;
  int32_t o6;
  float o7;
  FlowProd_int32_t_int32_t o8;
  bool o9;
  FlowProd_floatp_int32_t o10;
  float o11;
  FlowProd_int32_t_int32_t o12;
  int32_t o13;
  FlowProd_floatp_int32_t o14;
  float o15;
  FlowProd_float_float o16;
  float o17;
  FlowProd_float_float o18;
  float o19;
  FlowProd_int32_t_int32_t o20;
  int32_t o21;
  FlowProd_int32_t_float o22;
  FlowProd_FlowProd_int32_t_float_bool o23;
  FlowProd_float_bool o24;
  float* t0 = nullptr;
  float* t1 = nullptr;
  o2 = in.f0;
  o3 = in.f1;
  o4.f0 = 0;
  o4.f1 = 0e0f;
  o5 = o4;
  while (true) {
    o8.f1 = 4;
    o6 = o5.f0;
    o7 = o5.f1;
    o8.f0 = o6;
    o24.f0 = o7;
    o9 = o8.f0 < o8.f1;
    o24.f1 = o9;
    if (!o24.f1) { break; }
    o12.f0 = 4;
    o20.f1 = 1;
    o14.f0 = o2;
    o10.f0 = o3;
    o10.f1 = o6;
    o12.f1 = o6;
    o20.f0 = o6;
    o18.f0 = o7;
    cu_check(cudaMalloc((void**)&t0, sizeof(float) * 1ULL), "cudaMalloc(t0)");
    k0_0<<<1, 1>>>(t0, o3, (int64_t)o6, d_trap);
    trap_check_after_launch();
    cu_check(cudaMemcpy(&o11, t0, sizeof(float), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
    o13 = (int32_t)((uint32_t)o12.f0 + (uint32_t)o12.f1);
    o21 = (int32_t)((uint32_t)o20.f0 + (uint32_t)o20.f1);
    o23.f1 = o9;
    o16.f0 = o11;
    o14.f1 = o13;
    o22.f0 = o21;
    cu_check(cudaMalloc((void**)&t1, sizeof(float) * 1ULL), "cudaMalloc(t1)");
    k0_1<<<1, 1>>>(t1, o2, (int64_t)o13, d_trap);
    trap_check_after_launch();
    cu_check(cudaMemcpy(&o15, t1, sizeof(float), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
    o16.f1 = o15;
    o17 = o16.f0 * o16.f1;
    o18.f1 = o17;
    o19 = o18.f0 + o18.f1;
    o22.f1 = o19;
    o23.f0 = o22;
    o5 = o23.f0;
  }
  o1 = o24.f0;
  cu_check(cudaFree(t0), "cudaFree(t0)");
  cu_check(cudaFree(t1), "cudaFree(t1)");
  return o1;
}

static void flow_main() {
  float* o2 = nullptr;
  float* o3 = nullptr;
  FlowProd_floatp_floatp o4;
  float o5;
  float o6;
  char* arena0 = nullptr;
  cu_check(cudaMalloc((void**)&arena0, 512ULL), "cudaMalloc(arena0)");
  static const float lit0[8] = { 1e0f, 2e0f, 3e0f, 4e0f, 5e0f, 6e0f, 7e0f, 8e0f };
  o2 = (float*)(arena0 + 0ULL);
  cu_check(cudaMemcpy(o2, lit0, sizeof(lit0), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  static const float lit1[4] = { 5e-1f, 2.5e-1f, 1.25e-1f, 6.25e-2f };
  o3 = (float*)(arena0 + 256ULL);
  cu_check(cudaMemcpy(o3, lit1, sizeof(lit1), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  o4.f0 = o2;
  o4.f1 = o3;
  o5 = fn0(o4);
  o6 = o5;
  flow_print_f32(o6, true);
  cu_check(cudaFree(arena0), "cudaFree(arena0)");
  return;
}

int main() {
  trap_init();
  flow_main();
  cu_check(cudaFree(d_trap), "cudaFree(d_trap)");
  return 0;
}
