crates/backends/cuda/tests/snapshots/golden_cu__example_sepia.snap
---
source: crates/backends/cuda/tests/golden_cu.rs
expression: cu
---
// flow-backend-cuda emitted translation unit
// build: nvcc -std=c++17 -fmad=false -arch=sm_89 prog.cu libflow_rt.a -lpthread -ldl -lm -o prog
// DESIGN §4: -fmad=false pins oracle float parity; host -march=native/-mfma forbidden.

#include <cstdint>
#include <cstdio>
#include <cstdlib>
#include <cstddef>
#include <cmath>
#include <cuda_runtime.h>

extern "C" {
void flow_print_i32(int32_t v, bool newline);
void flow_print_i64(int64_t v, bool newline);
void flow_print_u8(uint8_t v, bool newline);
void flow_print_bool(bool v, bool newline);
void flow_print_f32(float v, bool newline);
void flow_print_f64(double v, bool newline);
void flow_print_str(const uint8_t* ptr, size_t len, bool newline);
// Matches the Rust `-> !` (flow-rt/src/lib.rs): lets the compiler drop the
// dead fall-through after host guards. C++11 attribute, legal on an
// extern "C" declaration; host-only, so no device-pass concern.
[[noreturn]] void flow_trap(uint32_t kind);
}

// --- trap flag + CUDA error protocol (DESIGN §3) ---------------------------
static unsigned int* d_trap = nullptr;

// Assert one CUDA API return; on error print to stderr and exit 102 (the
// harness-visible infra-failure class — never an R1 data point).
static void cu_check(cudaError_t err, const char* what) {
    if (err != cudaSuccess) {
        fprintf(stderr, "flow-cuda infra error at %s: %s\n", what, cudaGetErrorString(err));
        exit(102);
    }
}

// Zero the trap flag — once per process, called at main start (H→D, §2 item 3).
static void trap_init() {
    cu_check(cudaMalloc((void**)&d_trap, sizeof(unsigned int)), "cudaMalloc(d_trap)");
    cu_check(cudaMemset(d_trap, 0, sizeof(unsigned int)), "cudaMemset(d_trap)");
}

// Trap-capable launch sites call this after EVERY such kernel launch (#14:
// a provably trap-free kernel takes no trap argument and skips this
// readback): cudaGetLastError
// (exit-102 protocol), then a host-synchronizing D→H read of the flag (the
// memcpy is the sync point); nonzero kind ⇒ flow_trap(kind - 1) on the host
// (exit 101) — the flag stores kind + 1 (0 = quiescent after trap_init's
// memset; 1 = div_zero, 2 = index_oob), decoded here to the flow-rt kinds.
[[maybe_unused]] static void trap_check_after_launch() {
    cu_check(cudaGetLastError(), "kernel launch");
    unsigned int kind = 0;
    cu_check(cudaMemcpy(&kind, d_trap, sizeof(unsigned int), cudaMemcpyDeviceToHost),
             "cudaMemcpy(d_trap)");
    if (kind != 0) {
        flow_trap(kind - 1);
    }
}

struct FlowProd_float_float_float {
    float f0;
    float f1;
    float f2;
};
static_assert(sizeof(FlowProd_float_float_float) == 12, "FlowProd_float_float_float: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_float {
    float f0;
    float f1;
};
static_assert(sizeof(FlowProd_float_float) == 8, "FlowProd_float_float: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_float_bool {
    float f0;
    float f1;
    bool f2;
};
static_assert(sizeof(FlowProd_float_float_bool) == 12, "FlowProd_float_float_bool: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_FlowProd_float_float_float {
    float f0;
    FlowProd_float_float_float f1;
};
static_assert(sizeof(FlowProd_float_FlowProd_float_float_float) == 16, "FlowProd_float_FlowProd_float_float_float: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_float_FlowProd_float_float_floatp {
    float f0;
    FlowProd_float_float_float* f1;
};
static_assert(sizeof(FlowProd_float_FlowProd_float_float_floatp) == 16, "FlowProd_float_FlowProd_float_float_floatp: abi_sizeof drift (plan-smart-arenas)");

static __host__ __device__ float fn0(FlowProd_float_float_float in);
static __host__ __device__ FlowProd_float_float_float fn2(FlowProd_float_float_float in);
static __host__ __device__ float fn3(FlowProd_float_FlowProd_float_float_float in);

static __host__ __device__ float fn0(FlowProd_float_float_float in) {
  float o1;
  float o2;
  float o3;
  float o4;
  o2 = in.f0;
  o3 = in.f1;
  o4 = in.f2;
  float t0 = o3;
  float t1 = o2;
  float t2 = o4;
  float t3 = ((o2 < o3) ? t0 : t1);
  o1 = (o2 > o4) ? t2 : t3;
  return o1;
}
static __host__ __device__ FlowProd_float_float_float fn2(FlowProd_float_float_float in) {
  FlowProd_float_float_float o1;
  FlowProd_float_float_float o15;
  float o16;
  FlowProd_float_float_float o30;
  float o31;
  FlowProd_float_float_float o45;
  float o46;
  o15.f1 = 0e0f;
  o15.f2 = 2.55e2f;
  o30.f1 = 0e0f;
  o30.f2 = 2.55e2f;
  o45.f1 = 0e0f;
  o45.f2 = 2.55e2f;
  o15.f0 = (((in.f0 * 3.93e-1f) + (in.f1 * 7.69e-1f)) + (in.f2 * 1.89e-1f));
  o30.f0 = (((in.f0 * 3.49e-1f) + (in.f1 * 6.86e-1f)) + (in.f2 * 1.68e-1f));
  o45.f0 = (((in.f0 * 2.72e-1f) + (in.f1 * 5.34e-1f)) + (in.f2 * 1.31e-1f));
  o16 = fn0(o15);
  o31 = fn0(o30);
  o46 = fn0(o45);
  o1.f0 = o16;
  o1.f1 = o31;
  o1.f2 = o46;
  return o1;
}
static __host__ __device__ float fn3(FlowProd_float_FlowProd_float_float_float in) {
  float o1;
  FlowProd_float_float_float o3;
  o3 = in.f1;
  o1 = in.f0 + o3.f0;
  return o1;
}

__global__ void k1_0(FlowProd_float_float_float* out, FlowProd_float_float_float* in) {
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 16ULL) {
    out[i] = fn2(in[i]);
  }
}
__global__ void k1_1(float* result, float acc0, FlowProd_float_float_float* arr) {
  float acc = acc0;
  FlowProd_float_FlowProd_float_float_float pair;
  for (unsigned long long i = 0; i < 16ULL; i++) {
    pair.f0 = acc;
    pair.f1 = arr[i];
    acc = fn3(pair);
  }
  *result = acc;
}

static void flow_main();

static void flow_main() {
  FlowProd_float_float_float o2;
  FlowProd_float_float_float o3;
  FlowProd_float_float_float o4;
  FlowProd_float_float_float o5;
  FlowProd_float_float_float o6;
  FlowProd_float_float_float o7;
  FlowProd_float_float_float o8;
  FlowProd_float_float_float o9;
  FlowProd_float_float_float o10;
  FlowProd_float_float_float o11;
  FlowProd_float_float_float o12;
  FlowProd_float_float_float o13;
  FlowProd_float_float_float o14;
  FlowProd_float_float_float o15;
  FlowProd_float_float_float o16;
  FlowProd_float_float_float o17;
  FlowProd_float_float_float* o18 = nullptr;
  FlowProd_float_float_float* o19 = nullptr;
  FlowProd_float_FlowProd_float_float_floatp o20;
  float o21;
  float o22;
  char* arena0 = nullptr;
  float* t1 = nullptr;
  cu_check(cudaMalloc((void**)&arena0, 768ULL), "cudaMalloc(arena0)");
  o2.f0 = 2e2f;
  o2.f1 = 2e2f;
  o2.f2 = 2e2f;
  o3.f0 = 2e2f;
  o3.f1 = 2e2f;
  o3.f2 = 2e2f;
  o4.f0 = 2e2f;
  o4.f1 = 2e2f;
  o4.f2 = 2e2f;
  o5.f0 = 2e2f;
  o5.f1 = 2e2f;
  o5.f2 = 2e2f;
  o6.f0 = 2e2f;
  o6.f1 = 2e2f;
  o6.f2 = 2e2f;
  o7.f0 = 2e2f;
  o7.f1 = 2e2f;
  o7.f2 = 2e2f;
  o8.f0 = 2e2f;
  o8.f1 = 2e2f;
  o8.f2 = 2e2f;
  o9.f0 = 2e2f;
  o9.f1 = 2e2f;
  o9.f2 = 2e2f;
  o10.f0 = 2e2f;
  o10.f1 = 2e2f;
  o10.f2 = 2e2f;
  o11.f0 = 2e2f;
  o11.f1 = 2e2f;
  o11.f2 = 2e2f;
  o12.f0 = 2e2f;
  o12.f1 = 2e2f;
  o12.f2 = 2e2f;
  o13.f0 = 2e2f;
  o13.f1 = 2e2f;
  o13.f2 = 2e2f;
  o14.f0 = 2e2f;
  o14.f1 = 2e2f;
  o14.f2 = 2e2f;
  o15.f0 = 2e2f;
  o15.f1 = 2e2f;
  o15.f2 = 2e2f;
  o16.f0 = 2e2f;
  o16.f1 = 2e2f;
  o16.f2 = 2e2f;
  o17.f0 = 2e2f;
  o17.f1 = 2e2f;
  o17.f2 = 2e2f;
  o20.f0 = 0e0f;
  FlowProd_float_float_float lit0[16] = { o2, o3, o4, o5, o6, o7, o8, o9, o10, o11, o12, o13, o14, o15, o16, o17 };
  o18 = (FlowProd_float_float_float*)(arena0 + 0ULL);
  cu_check(cudaMemcpy(o18, lit0, sizeof(lit0), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  o19 = (FlowProd_float_float_float*)(arena0 + 256ULL);
  k1_0<<<(unsigned int)((16ULL + 255ULL) / 256ULL), 256>>>(o19, o18);
  o20.f1 = o19;
  t1 = (float*)(arena0 + 512ULL);
  k1_1<<<1, 1>>>(t1, 0e0f, o19);
  cu_check(cudaMemcpy(&o21, t1, sizeof(float), cudaMemcpyDeviceToHost), "cudaMemcpy(fold)");
  o22 = o21;
  flow_print_f32(o22, true);
  cu_check(cudaFree(arena0), "cudaFree(arena0)");
  return;
}

int main() {
  trap_init();
  flow_main();
  cu_check(cudaFree(d_trap), "cudaFree(d_trap)");
  return 0;
}
