crates/backends/cuda/tests/snapshots/golden_cu__example_sum_to_n.snap
---
source: crates/backends/cuda/tests/golden_cu.rs
expression: cu
---
// mapal-backend-cuda emitted translation unit
// build: nvcc -std=c++17 -fmad=true -arch=sm_89 prog.cu libmapal_rt.a -lpthread -ldl -lm -o prog
// DESIGN §4 (amended S24b, Sapir): -fmad=true is the product/perf default; conformance runs pin -fmad=false for oracle bit-parity. Host -march=native/-mfma stays forbidden in conformance.

#include <cstdint>
#include <cstdio>
#include <cstdlib>
#include <cstddef>
#include <cmath>
#include <cuda_runtime.h>

extern "C" {
void mapal_print_i32(int32_t v, bool newline);
void mapal_print_i64(int64_t v, bool newline);
void mapal_print_u8(uint8_t v, bool newline);
void mapal_print_bool(bool v, bool newline);
void mapal_print_f32(float v, bool newline);
void mapal_print_f64(double v, bool newline);
void mapal_print_str(const uint8_t* ptr, size_t len, bool newline);
// Matches the Rust `-> !` (mapal-rt/src/lib.rs): lets the compiler drop the
// dead fall-through after host guards. C++11 attribute, legal on an
// extern "C" declaration; host-only, so no device-pass concern.
[[noreturn]] void mapal_trap(uint32_t kind);
}

// --- trap flag + CUDA error protocol (DESIGN §3) ---------------------------
static unsigned int* d_trap = nullptr;

// Assert one CUDA API return; on error print to stderr and exit 102 (the
// harness-visible infra-failure class — never an R1 data point).
static void cu_check(cudaError_t err, const char* what) {
    if (err != cudaSuccess) {
        fprintf(stderr, "flow-cuda infra error at %s: %s\n", what, cudaGetErrorString(err));
        exit(102);
    }
}

// Zero the trap flag — once per process, called at main start (H→D, §2 item 3).
static void trap_init() {
    cu_check(cudaMalloc((void**)&d_trap, sizeof(unsigned int)), "cudaMalloc(d_trap)");
    cu_check(cudaMemset(d_trap, 0, sizeof(unsigned int)), "cudaMemset(d_trap)");
}

// Trap-capable launch sites call this after EVERY such kernel launch (#14:
// a provably trap-free kernel takes no trap argument and skips this
// readback): cudaGetLastError
// (exit-102 protocol), then a host-synchronizing D→H read of the flag (the
// memcpy is the sync point); nonzero kind ⇒ mapal_trap(kind - 1) on the host
// (exit 101) — the flag stores kind + 1 (0 = quiescent after trap_init's
// memset; 1 = div_zero, 2 = index_oob), decoded here to the mapal-rt kinds.
[[maybe_unused]] static void trap_check_after_launch() {
    cu_check(cudaGetLastError(), "kernel launch");
    unsigned int kind = 0;
    cu_check(cudaMemcpy(&kind, d_trap, sizeof(unsigned int), cudaMemcpyDeviceToHost),
             "cudaMemcpy(d_trap)");
    if (kind != 0) {
        mapal_trap(kind - 1);
    }
}

struct FlowProd_int32_t_int32_t {
    int32_t f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_t_int32_t) == 8, "FlowProd_int32_t_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_FlowProd_int32_t_int32_t_bool {
    FlowProd_int32_t_int32_t f0;
    bool f1;
};
static_assert(sizeof(FlowProd_FlowProd_int32_t_int32_t_bool) == 12, "FlowProd_FlowProd_int32_t_int32_t_bool: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_t_bool {
    int32_t f0;
    bool f1;
};
static_assert(sizeof(FlowProd_int32_t_bool) == 8, "FlowProd_int32_t_bool: abi_sizeof drift (plan-smart-arenas)");

static int32_t fn0(int32_t in);
static void mapal_main();

static int32_t fn0(int32_t in) {
  int32_t o1;
  FlowProd_int32_t_int32_t o2;
  FlowProd_int32_t_int32_t o3;
  int32_t o4;
  int32_t o5;
  FlowProd_int32_t_int32_t o6;
  bool o7;
  FlowProd_int32_t_int32_t o8;
  int32_t o9;
  FlowProd_int32_t_int32_t o10;
  int32_t o11;
  FlowProd_int32_t_int32_t o12;
  FlowProd_FlowProd_int32_t_int32_t_bool o13;
  FlowProd_int32_t_bool o14;
  o2.f0 = 1;
  o2.f1 = 0;
  o3 = o2;
  while (true) {
    o6.f1 = in;
    o4 = o3.f0;
    o5 = o3.f1;
    o6.f0 = o4;
    o14.f0 = o5;
    o7 = o6.f0 <= o6.f1;
    o14.f1 = o7;
    if (!o14.f1) { break; }
    o10.f1 = 1;
    o8.f1 = o4;
    o10.f0 = o4;
    o8.f0 = o5;
    o13.f1 = o7;
    o9 = (int32_t)((uint32_t)o8.f0 + (uint32_t)o8.f1);
    o12.f1 = o9;
    o11 = (int32_t)((uint32_t)o10.f0 + (uint32_t)o10.f1);
    o12.f0 = o11;
    o13.f0 = o12;
    o3 = o13.f0;
  }
  o1 = o14.f0;
  return o1;
}

static void mapal_main() {
  int32_t o2;
  int32_t o3;
  o2 = fn0(10);
  o3 = o2;
  mapal_print_i32(o3, true);
  return;
}

int main() {
  trap_init();
  mapal_main();
  cu_check(cudaFree(d_trap), "cudaFree(d_trap)");
  return 0;
}
